[gd_scene load_steps=3 format=3 uid="uid://cpjfn05e42oop"]

[ext_resource type="Script" uid="uid://doct8q3fl4p5y" path="res://list_obj.gd" id="1_hk1dm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_88iua"]
size = Vector2(236, 57)

[node name="ListObj" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_hk1dm")

[node name="UpButton" type="Button" parent="."]
offset_right = 53.0
offset_bottom = 31.0
text = "Up
"

[node name="DownButton" type="Button" parent="."]
offset_top = 30.0
offset_right = 42.0
offset_bottom = 60.0
text = "Down"

[node name="delete" type="Button" parent="."]
offset_left = 288.0
offset_right = 347.0
offset_bottom = 61.0
text = "Delete"

[node name="OpenNotes" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OpenNotes"]
position = Vector2(170, 30.5)
shape = SubResource("RectangleShape2D_88iua")

[node name="ConnectionName" type="RichTextLabel" parent="."]
offset_left = 51.0
offset_top = -1.0
offset_right = 285.0
offset_bottom = 60.0
mouse_filter = 2

[connection signal="pressed" from="UpButton" to="." method="_on_up_button_pressed"]
[connection signal="pressed" from="DownButton" to="." method="_on_down_button_pressed"]
[connection signal="pressed" from="delete" to="." method="_on_delete_pressed"]
[connection signal="mouse_entered" from="OpenNotes" to="." method="_on_open_notes_mouse_entered"]
[connection signal="mouse_exited" from="OpenNotes" to="." method="_on_open_notes_mouse_exited"]
